--- a/finance/finance_analysis.ipynb
+++ b/finance/finance_analysis.ipynb
@@ -151,7 +151,93 @@
       "['CTRP']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
       "\n",
       "1 Failed download:\n",
-      "['CY']: Exception('%ticker%: No timezone found, symbol may be delisted')\n"
+      "['CY']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['DISCB']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['DISCA']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['DISCK']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['DNKN']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['ETFC']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['FB']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['FLIR']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['GLIBA']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['HDS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['HBANO']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['INFO']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['LOGM']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['MSG']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['MXIM']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['MYL']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['PBCT']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['PRAH']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['PFPT']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['SINA']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['SIVB']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['SYMC']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['UBNT']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['ULTI']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['WLTW']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['XLNX']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "Failed to get ticker 'BRK/A' reason: Expecting value: line 1 column 1 (char 0)\n",
+      "\n",
+      "1 Failed download:\n",
+      "['BRK/A']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "Failed to get ticker 'BRK/B' reason: Expecting value: line 1 column 1 (char 0)\n",
+      "\n",
+      "1 Failed download:\n",
+      "['BRK/B']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "\n",
+      "1 Failed download:\n",
+      "['ANGEN']: Exception('%ticker%: No timezone found, symbol may be delisted')\n"
      ]
     }
    ],
@@ -178,9 +264,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Ticker</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2023-07-03</th>\n",
+       "      <td>17.860001</td>\n",
+       "      <td>18.180000</td>\n",
+       "      <td>17.820000</td>\n",
+       "      <td>18.100000</td>\n",
+       "      <td>18.100000</td>\n",
+       "      <td>12883700.0</td>\n",
+       "      <td>AAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-03</th>\n",
+       "      <td>193.779999</td>\n",
+       "      <td>193.880005</td>\n",
+       "      <td>191.759995</td>\n",
+       "      <td>192.460007</td>\n",
+       "      <td>192.460007</td>\n",
+       "      <td>31458200.0</td>\n",
+       "      <td>AAPL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-03</th>\n",
+       "      <td>134.000000</td>\n",
+       "      <td>135.429993</td>\n",
+       "      <td>133.149994</td>\n",
+       "      <td>135.009995</td>\n",
+       "      <td>135.009995</td>\n",
+       "      <td>2674600.0</td>\n",
+       "      <td>ABBV</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-03</th>\n",
+       "      <td>108.250000</td>\n",
+       "      <td>108.480003</td>\n",
+       "      <td>107.029999</td>\n",
+       "      <td>107.220001</td>\n",
+       "      <td>107.220001</td>\n",
+       "      <td>2268000.0</td>\n",
+       "      <td>ABT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-03</th>\n",
+       "      <td>74.430000</td>\n",
+       "      <td>74.440002</td>\n",
+       "      <td>73.010002</td>\n",
+       "      <td>73.989998</td>\n",
+       "      <td>73.989998</td>\n",
+       "      <td>808300.0</td>\n",
+       "      <td>ACGL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1962-01-02</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>11.187500</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>11.125000</td>\n",
+       "      <td>1.951758</td>\n",
+       "      <td>32000.0</td>\n",
+       "      <td>GT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1962-01-02</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.223380</td>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>0.223380</td>\n",
+       "      <td>0.065487</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>JNJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1962-01-02</th>\n",
+       "      <td>0.263021</td>\n",
+       "      <td>0.270182</td>\n",
+       "      <td>0.263021</td>\n",
+       "      <td>0.263021</td>\n",
+       "      <td>0.048913</td>\n",
+       "      <td>806400.0</td>\n",
+       "      <td>KO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1962-01-02</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.441406</td>\n",
+       "      <td>1.421875</td>\n",
+       "      <td>1.429688</td>\n",
+       "      <td>0.264243</td>\n",
+       "      <td>192000.0</td>\n",
+       "      <td>PG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1962-01-02</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.589844</td>\n",
+       "      <td>1.578125</td>\n",
+       "      <td>1.578125</td>\n",
+       "      <td>0.097452</td>\n",
+       "      <td>902400.0</td>\n",
+       "      <td>XOM</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1832585 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Open        High         Low       Close   Adj Close  \\\n",
+       "Date                                                                     \n",
+       "2023-07-03   17.860001   18.180000   17.820000   18.100000   18.100000   \n",
+       "2023-07-03  193.779999  193.880005  191.759995  192.460007  192.460007   \n",
+       "2023-07-03  134.000000  135.429993  133.149994  135.009995  135.009995   \n",
+       "2023-07-03  108.250000  108.480003  107.029999  107.220001  107.220001   \n",
+       "2023-07-03   74.430000   74.440002   73.010002   73.989998   73.989998   \n",
+       "...                ...         ...         ...         ...         ...   \n",
+       "1962-01-02    0.000000   11.187500   11.000000   11.125000    1.951758   \n",
+       "1962-01-02    0.000000    0.223380    0.222222    0.223380    0.065487   \n",
+       "1962-01-02    0.263021    0.270182    0.263021    0.263021    0.048913   \n",
+       "1962-01-02    0.000000    1.441406    1.421875    1.429688    0.264243   \n",
+       "1962-01-02    0.000000    1.589844    1.578125    1.578125    0.097452   \n",
+       "\n",
+       "                Volume Ticker  \n",
+       "Date                           \n",
+       "2023-07-03  12883700.0    AAL  \n",
+       "2023-07-03  31458200.0   AAPL  \n",
+       "2023-07-03   2674600.0   ABBV  \n",
+       "2023-07-03   2268000.0    ABT  \n",
+       "2023-07-03    808300.0   ACGL  \n",
+       "...                ...    ...  \n",
+       "1962-01-02     32000.0     GT  \n",
+       "1962-01-02         0.0    JNJ  \n",
+       "1962-01-02    806400.0     KO  \n",
+       "1962-01-02    192000.0     PG  \n",
+       "1962-01-02    902400.0    XOM  \n",
+       "\n",
+       "[1832585 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "combined_data.sort_values(by=['Date','Ticker'],ascending=[False,True])"
    ]
@@ -195,16 +474,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['BTC-USD', 'ETH-USD', 'DOGE-USD', 'BTC-CAD', 'ETH-CAD', 'DOGE-CAD']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cryptocurrencies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,9 +520,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Ticker</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2023-07-04</th>\n",
+       "      <td>40585.140625</td>\n",
+       "      <td>41581.066406</td>\n",
+       "      <td>40553.710938</td>\n",
+       "      <td>41277.390625</td>\n",
+       "      <td>41277.390625</td>\n",
+       "      <td>20232849771</td>\n",
+       "      <td>BTC-CAD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-04</th>\n",
+       "      <td>0.090173</td>\n",
+       "      <td>0.091030</td>\n",
+       "      <td>0.089297</td>\n",
+       "      <td>0.090557</td>\n",
+       "      <td>0.090557</td>\n",
+       "      <td>351701596</td>\n",
+       "      <td>DOGE-CAD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-04</th>\n",
+       "      <td>2568.180420</td>\n",
+       "      <td>2615.072021</td>\n",
+       "      <td>2564.724121</td>\n",
+       "      <td>2590.583496</td>\n",
+       "      <td>2590.583496</td>\n",
+       "      <td>10411290755</td>\n",
+       "      <td>ETH-CAD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-03</th>\n",
+       "      <td>40522.933594</td>\n",
+       "      <td>40750.519531</td>\n",
+       "      <td>40088.023438</td>\n",
+       "      <td>40580.175781</td>\n",
+       "      <td>40580.175781</td>\n",
+       "      <td>13959412260</td>\n",
+       "      <td>BTC-CAD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-03</th>\n",
+       "      <td>30624.515625</td>\n",
+       "      <td>31375.613281</td>\n",
+       "      <td>30586.513672</td>\n",
+       "      <td>31156.439453</td>\n",
+       "      <td>31156.439453</td>\n",
+       "      <td>15271884873</td>\n",
+       "      <td>BTC-USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-09-19</th>\n",
+       "      <td>424.102997</td>\n",
+       "      <td>427.834991</td>\n",
+       "      <td>384.532013</td>\n",
+       "      <td>394.795990</td>\n",
+       "      <td>394.795990</td>\n",
+       "      <td>37919700</td>\n",
+       "      <td>BTC-USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-09-18</th>\n",
+       "      <td>502.957153</td>\n",
+       "      <td>502.728729</td>\n",
+       "      <td>452.183655</td>\n",
+       "      <td>464.379822</td>\n",
+       "      <td>464.379822</td>\n",
+       "      <td>37728069</td>\n",
+       "      <td>BTC-CAD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-09-18</th>\n",
+       "      <td>456.859985</td>\n",
+       "      <td>456.859985</td>\n",
+       "      <td>413.104004</td>\n",
+       "      <td>424.440002</td>\n",
+       "      <td>424.440002</td>\n",
+       "      <td>34483200</td>\n",
+       "      <td>BTC-USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-09-17</th>\n",
+       "      <td>511.192596</td>\n",
+       "      <td>513.446411</td>\n",
+       "      <td>497.302246</td>\n",
+       "      <td>503.479004</td>\n",
+       "      <td>503.479004</td>\n",
+       "      <td>23181431</td>\n",
+       "      <td>BTC-CAD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-09-17</th>\n",
+       "      <td>465.864014</td>\n",
+       "      <td>468.174011</td>\n",
+       "      <td>452.421997</td>\n",
+       "      <td>457.334015</td>\n",
+       "      <td>457.334015</td>\n",
+       "      <td>21056800</td>\n",
+       "      <td>BTC-USD</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14675 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Open          High           Low         Close  \\\n",
+       "Date                                                                 \n",
+       "2023-07-04  40585.140625  41581.066406  40553.710938  41277.390625   \n",
+       "2023-07-04      0.090173      0.091030      0.089297      0.090557   \n",
+       "2023-07-04   2568.180420   2615.072021   2564.724121   2590.583496   \n",
+       "2023-07-03  40522.933594  40750.519531  40088.023438  40580.175781   \n",
+       "2023-07-03  30624.515625  31375.613281  30586.513672  31156.439453   \n",
+       "...                  ...           ...           ...           ...   \n",
+       "2014-09-19    424.102997    427.834991    384.532013    394.795990   \n",
+       "2014-09-18    502.957153    502.728729    452.183655    464.379822   \n",
+       "2014-09-18    456.859985    456.859985    413.104004    424.440002   \n",
+       "2014-09-17    511.192596    513.446411    497.302246    503.479004   \n",
+       "2014-09-17    465.864014    468.174011    452.421997    457.334015   \n",
+       "\n",
+       "               Adj Close       Volume    Ticker  \n",
+       "Date                                             \n",
+       "2023-07-04  41277.390625  20232849771   BTC-CAD  \n",
+       "2023-07-04      0.090557    351701596  DOGE-CAD  \n",
+       "2023-07-04   2590.583496  10411290755   ETH-CAD  \n",
+       "2023-07-03  40580.175781  13959412260   BTC-CAD  \n",
+       "2023-07-03  31156.439453  15271884873   BTC-USD  \n",
+       "...                  ...          ...       ...  \n",
+       "2014-09-19    394.795990     37919700   BTC-USD  \n",
+       "2014-09-18    464.379822     37728069   BTC-CAD  \n",
+       "2014-09-18    424.440002     34483200   BTC-USD  \n",
+       "2014-09-17    503.479004     23181431   BTC-CAD  \n",
+       "2014-09-17    457.334015     21056800   BTC-USD  \n",
+       "\n",
+       "[14675 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "combined_crypto_data.sort_values(by=['Date','Ticker'],ascending=[False,True])"
    ]
