--- a/finance/finance_analysis.ipynb
+++ b/finance/finance_analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,17 +102,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of stock tickers: 301\n"
+     ]
+    }
+   ],
    "source": [
     "# see tickers\n",
-    "#tickers"
+    "#tickers\n",
+    "print('number of stock tickers: ' + str(len(tickers)) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +383,7 @@
        "      <td>11.187500</td>\n",
        "      <td>11.000000</td>\n",
        "      <td>11.125000</td>\n",
-       "      <td>1.951758</td>\n",
+       "      <td>1.951759</td>\n",
        "      <td>32000.0</td>\n",
        "      <td>GT</td>\n",
        "    </tr>\n",
@@ -432,7 +441,7 @@
        "2023-07-03  108.250000  108.480003  107.029999  107.220001  107.220001   \n",
        "2023-07-03   74.430000   74.440002   73.010002   73.989998   73.989998   \n",
        "...                ...         ...         ...         ...         ...   \n",
-       "1962-01-02    0.000000   11.187500   11.000000   11.125000    1.951758   \n",
+       "1962-01-02    0.000000   11.187500   11.000000   11.125000    1.951759   \n",
        "1962-01-02    0.000000    0.223380    0.222222    0.223380    0.065487   \n",
        "1962-01-02    0.263021    0.270182    0.263021    0.263021    0.048913   \n",
        "1962-01-02    0.000000    1.441406    1.421875    1.429688    0.264243   \n",
@@ -455,7 +464,7 @@
        "[1832585 rows x 7 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +492,7 @@
        "['BTC-USD', 'ETH-USD', 'DOGE-USD', 'BTC-CAD', 'ETH-CAD', 'DOGE-CAD']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +720,7 @@
        "[14675 rows x 7 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
