--- a/finance/finance_analysis.ipynb
+++ b/finance/finance_analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,14 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of stock tickers: 301\n"
+      "number of stock tickers: 262\n"
      ]
     }
    ],
@@ -121,135 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "1 Failed download:\n",
-      "['ALXN']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['AABA']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['AMOV']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['ATHN']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['OZRK']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['CDK']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['CELG']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['CERN']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['CTXS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['CTRP']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['CY']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['DISCB']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['DISCA']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['DISCK']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['DNKN']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['ETFC']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['FB']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['FLIR']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['GLIBA']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['HDS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['HBANO']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['INFO']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['LOGM']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['MSG']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['MXIM']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['MYL']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['PBCT']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['PRAH']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['PFPT']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['SINA']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['SIVB']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['SYMC']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['UBNT']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['ULTI']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['WLTW']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['XLNX']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "Failed to get ticker 'BRK/A' reason: Expecting value: line 1 column 1 (char 0)\n",
-      "\n",
-      "1 Failed download:\n",
-      "['BRK/A']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "Failed to get ticker 'BRK/B' reason: Expecting value: line 1 column 1 (char 0)\n",
-      "\n",
-      "1 Failed download:\n",
-      "['BRK/B']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
-      "\n",
-      "1 Failed download:\n",
-      "['ANGEN']: Exception('%ticker%: No timezone found, symbol may be delisted')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for loop to download data for multiple tickers\n",
     "\n",
@@ -273,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +198,7 @@
        "      <td>17.820000</td>\n",
        "      <td>18.100000</td>\n",
        "      <td>18.100000</td>\n",
-       "      <td>12883700.0</td>\n",
+       "      <td>12883700</td>\n",
        "      <td>AAL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -334,7 +208,7 @@
        "      <td>191.759995</td>\n",
        "      <td>192.460007</td>\n",
        "      <td>192.460007</td>\n",
-       "      <td>31458200.0</td>\n",
+       "      <td>31458200</td>\n",
        "      <td>AAPL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -344,7 +218,7 @@
        "      <td>133.149994</td>\n",
        "      <td>135.009995</td>\n",
        "      <td>135.009995</td>\n",
-       "      <td>2674600.0</td>\n",
+       "      <td>2674600</td>\n",
        "      <td>ABBV</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -354,7 +228,7 @@
        "      <td>107.029999</td>\n",
        "      <td>107.220001</td>\n",
        "      <td>107.220001</td>\n",
-       "      <td>2268000.0</td>\n",
+       "      <td>2268000</td>\n",
        "      <td>ABT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -364,7 +238,7 @@
        "      <td>73.010002</td>\n",
        "      <td>73.989998</td>\n",
        "      <td>73.989998</td>\n",
-       "      <td>808300.0</td>\n",
+       "      <td>808300</td>\n",
        "      <td>ACGL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -383,8 +257,8 @@
        "      <td>11.187500</td>\n",
        "      <td>11.000000</td>\n",
        "      <td>11.125000</td>\n",
-       "      <td>1.951759</td>\n",
-       "      <td>32000.0</td>\n",
+       "      <td>1.951760</td>\n",
+       "      <td>32000</td>\n",
        "      <td>GT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -394,7 +268,7 @@
        "      <td>0.222222</td>\n",
        "      <td>0.223380</td>\n",
        "      <td>0.065487</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>JNJ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -404,7 +278,7 @@
        "      <td>0.263021</td>\n",
        "      <td>0.263021</td>\n",
        "      <td>0.048913</td>\n",
-       "      <td>806400.0</td>\n",
+       "      <td>806400</td>\n",
        "      <td>KO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -414,7 +288,7 @@
        "      <td>1.421875</td>\n",
        "      <td>1.429688</td>\n",
        "      <td>0.264243</td>\n",
-       "      <td>192000.0</td>\n",
+       "      <td>192000</td>\n",
        "      <td>PG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -424,7 +298,7 @@
        "      <td>1.578125</td>\n",
        "      <td>1.578125</td>\n",
        "      <td>0.097452</td>\n",
-       "      <td>902400.0</td>\n",
+       "      <td>902400</td>\n",
        "      <td>XOM</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -441,30 +315,30 @@
        "2023-07-03  108.250000  108.480003  107.029999  107.220001  107.220001   \n",
        "2023-07-03   74.430000   74.440002   73.010002   73.989998   73.989998   \n",
        "...                ...         ...         ...         ...         ...   \n",
-       "1962-01-02    0.000000   11.187500   11.000000   11.125000    1.951759   \n",
+       "1962-01-02    0.000000   11.187500   11.000000   11.125000    1.951760   \n",
        "1962-01-02    0.000000    0.223380    0.222222    0.223380    0.065487   \n",
        "1962-01-02    0.263021    0.270182    0.263021    0.263021    0.048913   \n",
        "1962-01-02    0.000000    1.441406    1.421875    1.429688    0.264243   \n",
        "1962-01-02    0.000000    1.589844    1.578125    1.578125    0.097452   \n",
        "\n",
-       "                Volume Ticker  \n",
-       "Date                           \n",
-       "2023-07-03  12883700.0    AAL  \n",
-       "2023-07-03  31458200.0   AAPL  \n",
-       "2023-07-03   2674600.0   ABBV  \n",
-       "2023-07-03   2268000.0    ABT  \n",
-       "2023-07-03    808300.0   ACGL  \n",
-       "...                ...    ...  \n",
-       "1962-01-02     32000.0     GT  \n",
-       "1962-01-02         0.0    JNJ  \n",
-       "1962-01-02    806400.0     KO  \n",
-       "1962-01-02    192000.0     PG  \n",
-       "1962-01-02    902400.0    XOM  \n",
+       "              Volume Ticker  \n",
+       "Date                         \n",
+       "2023-07-03  12883700    AAL  \n",
+       "2023-07-03  31458200   AAPL  \n",
+       "2023-07-03   2674600   ABBV  \n",
+       "2023-07-03   2268000    ABT  \n",
+       "2023-07-03    808300   ACGL  \n",
+       "...              ...    ...  \n",
+       "1962-01-02     32000     GT  \n",
+       "1962-01-02         0    JNJ  \n",
+       "1962-01-02    806400     KO  \n",
+       "1962-01-02    192000     PG  \n",
+       "1962-01-02    902400    XOM  \n",
        "\n",
        "[1832585 rows x 7 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +366,7 @@
        "['BTC-USD', 'ETH-USD', 'DOGE-USD', 'BTC-CAD', 'ETH-CAD', 'DOGE-CAD']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +594,7 @@
        "[14675 rows x 7 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
