--- a/housing/nyc_dhs_analysis.ipynb
+++ b/housing/nyc_dhs_analysis.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
        "[77747 rows x 20 columns]"
       ]
      },
-     "execution_count": 339,
+     "execution_count": 383,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
        "[3547 rows x 13 columns]"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 384,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [
     {
@@ -1507,7 +1507,7 @@
        "[4913 rows x 51 columns]"
       ]
      },
-     "execution_count": 343,
+     "execution_count": 387,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1519,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [
     {
@@ -1562,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [
     {
@@ -1709,7 +1709,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 347,
+     "execution_count": 391,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1721,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [
     {
@@ -1743,7 +1743,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 348,
+     "execution_count": 392,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1755,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1815,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 393,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1842,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1852,7 +1852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1862,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [
     {
@@ -2016,7 +2016,7 @@
        "[1264 rows x 6 columns]"
       ]
      },
-     "execution_count": 352,
+     "execution_count": 396,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2044,7 +2044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [
     {
@@ -2373,7 +2373,7 @@
        "[3547 rows x 13 columns]"
       ]
      },
-     "execution_count": 353,
+     "execution_count": 397,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2384,7 +2384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2415,7 +2415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [
     {
@@ -2424,7 +2424,7 @@
        "\"filtered_columns = []\\nfor column in dhs_daily_df.columns:\\n    if column.startswith('perc_'):\\n        filtered_columns.append(column)  \\ndhs_daily_df[filtered_columns].info()\""
       ]
      },
-     "execution_count": 355,
+     "execution_count": 399,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2439,7 +2439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2459,7 +2459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2469,7 +2469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2479,7 +2479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2505,7 +2505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2515,7 +2515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [
     {
@@ -16170,7 +16170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [
     {
@@ -16218,7 +16218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16242,7 +16242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [
     {
@@ -17476,6 +17476,7 @@
         }
        ],
        "layout": {
+        "height": 500,
         "legend": {
          "orientation": "h",
          "title": {
@@ -18315,6 +18316,7 @@
         "title": {
          "text": "Average Population in NYC Shelters (%)"
         },
+        "width": 1500,
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -18372,7 +18374,9 @@
     "# Customize the layout if needed\n",
     "fig.update_layout( xaxis_tickangle=0,\n",
     "                  legend=dict(orientation='h', yanchor='bottom', y=1.05, xanchor='left', x=0),\n",
-    "                  xaxis=dict(tickmode='auto', tickformat='%Y')\n",
+    "                  xaxis=dict(tickmode='auto', tickformat='%Y'),\n",
+    "                  width=1500,  # Set the desired width of the figure\n",
+    "                  height=500  # Set the desired height of the figure\n",
     "                  )\n",
     "\n",
     "# Add data labels\n",
@@ -18380,7 +18384,6 @@
     "         filtered_data['perc_total_children_in_shelter'].apply(lambda x: f'{round(x)}%')]\n",
     "for i, t in enumerate(texts):\n",
     "    fig.data[i].text = t\n",
-    "#fig.update_traces(textposition='inside', textfont=dict(color='black', size=10), textangle=0)\n",
     "\n",
     "# Display the plot\n",
     "fig.show()"
@@ -18396,7 +18399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [
     {
@@ -18529,6 +18532,7 @@
        ],
        "layout": {
         "barmode": "group",
+        "height": 500,
         "legend": {
          "orientation": "h",
          "title": {
@@ -19368,6 +19372,7 @@
         "title": {
          "text": "Percentage of Adults vs. Children in NYC Shelter by Year"
         },
+        "width": 1500,
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -19425,7 +19430,9 @@
     "# Customize the layout if needed\n",
     "fig.update_layout(barmode='group', xaxis_tickangle=0,\n",
     "                  legend=dict(orientation='h', yanchor='bottom', y=1.05, xanchor='left', x=0),\n",
-    "                  xaxis=dict(tickmode='auto', tickformat='%Y')\n",
+    "                  xaxis=dict(tickmode='auto', tickformat='%Y'),\n",
+    "                  width=1500,  # Set the desired width of the figure\n",
+    "                  height=500  # Set the desired height of the figure\n",
     "                  )\n",
     "\n",
     "# Add data labels\n",
@@ -19441,7 +19448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [
     {
@@ -19574,6 +19581,7 @@
        ],
        "layout": {
         "barmode": "group",
+        "height": 500,
         "legend": {
          "orientation": "h",
          "title": {
@@ -20413,6 +20421,7 @@
         "title": {
          "text": "Percentage of Single Adults by Gender in NYC Shelter by Year"
         },
+        "width": 1500,
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -20467,7 +20476,11 @@
     "\n",
     "# Customize the layout if needed\n",
     "fig.update_layout(barmode='group', xaxis_tickangle=0,\n",
-    "                  legend=dict(orientation='h', yanchor='bottom', y=1.05, xanchor='left', x=0))\n",
+    "                  legend=dict(orientation='h', yanchor='bottom', y=1.05, xanchor='left', x=0),\n",
+    "                  width=1500,  # Set the desired width of the figure\n",
+    "                  height=500  # Set the desired height of the figure\n",
+    "                  )\n",
+    "\n",
     "\n",
     "# Add data labels\n",
     "texts = [filtered_data['perc_single_adult_men_in_shelter'].apply(lambda x: f'{round(x)}%'),\n",
@@ -20482,7 +20495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [
     {
@@ -20675,6 +20688,7 @@
        ],
        "layout": {
         "barmode": "group",
+        "height": 500,
         "legend": {
          "orientation": "h",
          "title": {
@@ -21514,6 +21528,7 @@
         "title": {
          "text": "Percentage of Single Adults by Gender in NYC Shelter by Year"
         },
+        "width": 1500,
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -21563,7 +21578,8 @@
     "             color_discrete_sequence=['sienna', 'orange','silver'],\n",
     "             labels={'date_of_census': 'Year_Start', 'value': 'Percentage'},\n",
     "             title='Percentage of Single Adults by Gender in NYC Shelter by Year',\n",
-    "             \n",
+    "             width=1500,  # Set the desired width of the figure\n",
+    "            height=500  # Set the desired height of the figure\n",
     "             )\n",
     "\n",
     "# Customize the layout if needed\n",
@@ -21593,7 +21609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [
     {
@@ -21602,7 +21618,7 @@
        "\"correlation_matrix = filtered_data.corr()  # Correlation matrix\\nsns.heatmap(correlation_matrix, annot=True, cmap='rocket_r')\\nplt.show()\""
       ]
      },
-     "execution_count": 368,
+     "execution_count": 412,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21615,7 +21631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [
     {
@@ -21624,7 +21640,7 @@
        "\"desired_columns = [0,1,2,3,4,5,6,7,8]\\nfiltered_data = get_columns(quarterly_avg_df,desired_columns)\\n\\n\\ncorrelation_matrix = filtered_data.corr()  # Correlation matrix\\nsns.heatmap(correlation_matrix, annot=True, cmap='rocket_r')\\nplt.show()\""
       ]
      },
-     "execution_count": 369,
+     "execution_count": 413,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21655,7 +21671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21691,7 +21707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [
     {
@@ -21700,7 +21716,7 @@
        "\"forecasts = forecast_sarimax(filtered_data, forecast_steps=5)\\nvariable_name = 'perc_total_adults_in_shelter'\\nforecast_variable_1 = forecasts[variable_name]\\nforecast_variable_1\""
       ]
      },
-     "execution_count": 371,
+     "execution_count": 415,
      "metadata": {},
      "output_type": "execute_result"
     }
