--- a/housing/nyc_dhs_analysis.ipynb
+++ b/housing/nyc_dhs_analysis.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "| source  | link |\n",
     "|--------------|---------------|\n",
-    "Time Series | https://dev.socrata.com/blog/2019/10/07/time-series-analysis-with-jupyter-notebooks-and-socrata.html |\n"
+    "| Time Series | https://dev.socrata.com/blog/2019/10/07/time-series-analysis-with-jupyter-notebooks-and-socrata.html |\n"
    ]
   },
   {
