--- a/housing/forecasting.ipynb
+++ b/housing/forecasting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,13 @@
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "import xgboost as xgb\n",
     "from sklearn.impute import SimpleImputer\n",
-    "from statsmodels.tsa.api import SimpleExpSmoothing"
+    "from statsmodels.tsa.api import SimpleExpSmoothing\n",
+    "\n",
+    "import warnings\n",
+    "\n",
+    "# Filter out the specific warning messages\n",
+    "warnings.filterwarnings('ignore', category=UserWarning)\n",
+    "\n"
    ]
   },
   {
@@ -372,29 +378,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/mofeoluwajide-jegede/ds4a-2023-team-7/ds-team-env/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
-      "  self._init_dates(dates, freq)\n",
-      "/Users/mofeoluwajide-jegede/ds4a-2023-team-7/ds-team-env/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: A date index has been provided, but it is not monotonic and so will be ignored when e.g. forecasting.\n",
-      "  self._init_dates(dates, freq)\n",
-      "/Users/mofeoluwajide-jegede/ds4a-2023-team-7/ds-team-env/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:836: ValueWarning: No supported index is available. Prediction results will be given with an integer index beginning at `start`.\n",
-      "  return get_prediction_index(\n",
-      "/Users/mofeoluwajide-jegede/ds4a-2023-team-7/ds-team-env/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:836: FutureWarning: No supported index is available. In the next version, calling this method in a model without a supported index will result in an exception.\n",
-      "  return get_prediction_index(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Mean Squared Error (MSE): 67238314.6097581\n",
       "Mean Absolute Error (MAE): 7299.916162758659\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mofeoluwajide-jegede/ds4a-2023-team-7/ds-team-env/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:836: FutureWarning: No supported index is available. In the next version, calling this method in a model without a supported index will result in an exception.\n",
+      "  return get_prediction_index(\n"
      ]
     },
     {
@@ -438,7 +438,7 @@
     "plt.ylabel('Total Individuals in Shelter')\n",
     "plt.title('Exponential Smoothing Forecast')\n",
     "plt.legend()\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -527,35 +527,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/mofeoluwajide-jegede/ds4a-2023-team-7/ds-team-env/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
-      "  self._init_dates(dates, freq)\n",
-      "/Users/mofeoluwajide-jegede/ds4a-2023-team-7/ds-team-env/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: A date index has been provided, but it is not monotonic and so will be ignored when e.g. forecasting.\n",
-      "  self._init_dates(dates, freq)\n",
-      "/Users/mofeoluwajide-jegede/ds4a-2023-team-7/ds-team-env/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
-      "  self._init_dates(dates, freq)\n",
-      "/Users/mofeoluwajide-jegede/ds4a-2023-team-7/ds-team-env/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: A date index has been provided, but it is not monotonic and so will be ignored when e.g. forecasting.\n",
-      "  self._init_dates(dates, freq)\n",
-      "/Users/mofeoluwajide-jegede/ds4a-2023-team-7/ds-team-env/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
-      "  self._init_dates(dates, freq)\n",
-      "/Users/mofeoluwajide-jegede/ds4a-2023-team-7/ds-team-env/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: A date index has been provided, but it is not monotonic and so will be ignored when e.g. forecasting.\n",
-      "  self._init_dates(dates, freq)\n",
-      "/Users/mofeoluwajide-jegede/ds4a-2023-team-7/ds-team-env/lib/python3.10/site-packages/statsmodels/tsa/statespace/sarimax.py:966: UserWarning: Non-stationary starting autoregressive parameters found. Using zeros as starting parameters.\n",
-      "  warn('Non-stationary starting autoregressive parameters'\n",
-      "/Users/mofeoluwajide-jegede/ds4a-2023-team-7/ds-team-env/lib/python3.10/site-packages/statsmodels/tsa/statespace/sarimax.py:978: UserWarning: Non-invertible starting MA parameters found. Using zeros as starting parameters.\n",
-      "  warn('Non-invertible starting MA parameters found.'\n",
-      "/Users/mofeoluwajide-jegede/ds4a-2023-team-7/ds-team-env/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:836: ValueWarning: No supported index is available. Prediction results will be given with an integer index beginning at `start`.\n",
-      "  return get_prediction_index(\n",
-      "/Users/mofeoluwajide-jegede/ds4a-2023-team-7/ds-team-env/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:836: FutureWarning: No supported index is available. In the next version, calling this method in a model without a supported index will result in an exception.\n",
-      "  return get_prediction_index(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -563,6 +537,14 @@
       "Evaluation Metrics for ARIMA:\n",
       "ARIMA - MAE:  2316.1648792571045\n",
       "ARIMA - RMSE:  2505.39457699964\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mofeoluwajide-jegede/ds4a-2023-team-7/ds-team-env/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:836: FutureWarning: No supported index is available. In the next version, calling this method in a model without a supported index will result in an exception.\n",
+      "  return get_prediction_index(\n"
      ]
     },
     {
